part2/log-output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logoutput-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: default-replacepath-to-root@kubernetescrd
    traefik.ingress.kubernetes.io/router.priority: "42"
spec:
  rules:
  - http:
      paths:
      - path: /logoutput
        pathType: Prefix
        backend:
          service:
            name: logoutput-svc
            port:
              number: 2345
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port:
              number: 2345
